fix: overlapping between components with different z-index

--- a/src/styles/components/Header/MenuDropdown/menuDropdown.module.scss
+++ b/src/styles/components/Header/MenuDropdown/menuDropdown.module.scss
@@ -5,6 +5,7 @@
 	justify-content: flex-end;
 	position: fixed;
 	inset: 0;
+	z-index: 10;
 	background-color: #0000006b;
 }
 
